# ttydal

./: .gitignore  AUTHORS  README.md  dev.py  idea.md  pyproject.toml
src/ttydal/: __init__.py  api_logger.py  app.py  config.py  credentials.py  default_config.json  dirs.py  exceptions.py  image_cache.py  keybindings.py  logger.py  player.py  tidal_client.py
src/ttydal/components/: __init__.py  albums_list.py  cache_modal.py  cover_art_item.py  cover_art_modal.py  login_modal.py  player_bar.py  playlist_info_modal.py  search_modal.py  tracks_list.py
src/ttydal/pages/: __init__.py  config_page.py  player_page.py
src/ttydal/services/: __init__.py  mpris_service.py  mpv_playback_engine.py  playback_service.py  tidal_client.py  tracks_cache.py
