[project]
name = "ttydal"
version = "1.2.0"
description = "Tidal in your terminal!"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Bouteiller [a2n] Alan", email = "a2n.dev@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "cachetools>=6.2.4",
    "fuzzysearch>=0.8.1",
    "keyring>=25.7.0",
    "mpv>=1.0.8",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pyperclip>=1.9.0",
    "rich>=14.2.0",
    "textual>=7.0.1",
    "textual-dev>=1.8.0",
    "textual-image>=0.8.5",
    "tidalapi>=0.8.10",
]

[project.urls]
Homepage = "https://github.com/results-may-vary-org/ttydal"
Repository = "https://github.com/results-may-vary-org/ttydal"
Issues = "https://github.com/results-may-vary-org/ttydal/issues"

[project.scripts]
ttydal = "ttydal:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
